# DnD-App

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
backend/: CMakeLists.txt
backend/data/: users.json
backend/data/DnDData/: acTypes.json  alignments.json  attackData.js  attackRanges.json  conditionResImuVul.json  crData.js  crData.json  damageResImuVul.json  dice.js  dice.json  languages.json  legendaryResistanceType.json  movementTypes.json  recharge.json  resetTypes.json  sizes.js  sizes.json  skills.js  skills.json  stats.json
backend/data/classes/: class_barbarian.json  class_cleric.json
backend/data/encounters/: encounterexample1.json  goblin_test.json  impossible.json
backend/data/features/class/barbarian/: feature_barbarian_ability_score_improvement_12.json  feature_barbarian_ability_score_improvement_16.json  feature_barbarian_ability_score_improvement_4.json  feature_barbarian_ability_score_improvement_8.json  feature_barbarian_brutal_strike.json  feature_barbarian_danger_sense.json  feature_barbarian_epic_boon.json  feature_barbarian_extra_attack.json  feature_barbarian_fast_movement.json  feature_barbarian_feral_instinct.json  feature_barbarian_improved_brutal_strike.json  feature_barbarian_improved_brutal_strike_2d10.json  feature_barbarian_indomitable_might.json  feature_barbarian_instinctive_pounce.json  feature_barbarian_persistent_rage.json  feature_barbarian_primal_champion.json  feature_barbarian_primal_knowledge.json  feature_barbarian_rage.json  feature_barbarian_reckless_attack.json  feature_barbarian_relentless_rage.json  feature_barbarian_subclass.json  feature_barbarian_unarmored_defense.json  feature_barbarian_weapon_mastery.json
backend/data/features/class/cleric/: feature_cleric_blessed_strikes.json  feature_cleric_channel_divinity.json  feature_cleric_channel_divinity_divine_spark.json  feature_cleric_channel_divinity_turn_undead.json  feature_cleric_divine_intervention.json  feature_cleric_divine_order.json  feature_cleric_greater_divine_intervention.json  feature_cleric_improved_blessed_strikes.json  feature_cleric_sear_undead.json  feature_cleric_spellcasting.json  feature_cleric_subclass.json
backend/data/features/generic/: feature_generic_ability_score_improvement_12.json  feature_generic_ability_score_improvement_16.json  feature_generic_ability_score_improvement_4.json  feature_generic_ability_score_improvement_8.json  feature_generic_epic_boon.json
backend/data/features/subclass/Life Domain/: feature_life_blessed_healer.json  feature_life_disciple_of_life.json  feature_life_domain_spells.json  feature_life_preserve_life.json  feature_life_supreme_healing.json
backend/data/features/subclass/Path of the Berserker/: feature_berserker_frenzy.json  feature_berserker_intimidating_presence.json  feature_berserker_mindless_rage.json  feature_berserker_retaliation.json
backend/data/items/armor/: item_armor_breastplate.json  item_armor_chain_mail.json  item_armor_chain_shirt.json  item_armor_half_plate.json  item_armor_hide.json  item_armor_leather.json  item_armor_padded.json  item_armor_plate.json  item_armor_ring_mail.json  item_armor_scale_mail.json  item_armor_splint.json  item_armor_studded_leather.json  item_shield.json
backend/data/items/weapons/: item_weapon_battleaxe.json  item_weapon_blowgun.json  item_weapon_club.json  item_weapon_dagger.json  item_weapon_dart.json  item_weapon_flail.json  item_weapon_glaive.json  item_weapon_greataxe.json  item_weapon_greatclub.json  item_weapon_greatsword.json  item_weapon_halberd.json  item_weapon_hand_crossbow.json  item_weapon_handaxe.json  item_weapon_heavy_crossbow.json  item_weapon_javelin.json  item_weapon_lance.json  item_weapon_light_crossbow.json  item_weapon_light_hammer.json  item_weapon_longbow.json  item_weapon_longsword.json  item_weapon_mace.json  item_weapon_maul.json  item_weapon_morningstar.json  item_weapon_musket.json  item_weapon_pike.json  item_weapon_pistol.json  item_weapon_quarterstaff.json  item_weapon_rapier.json  item_weapon_scimitar.json  item_weapon_shortbow.json  item_weapon_shortsword.json  item_weapon_sickle.json  item_weapon_sling.json  item_weapon_spear.json  item_weapon_trident.json  item_weapon_war_pick.json  item_weapon_warhammer.json  item_weapon_whip.json
backend/data/monsters/: Archmage.json  Goblin.json  Tarrasque.json  TestOutside0.json  allgemeinesLayout.json
backend/data/monsters/completed/: TestCompleted0.json  defaulttest_cr5.json  t_cr5.json  test_neu_cr2.json  testcompleted_cr5.json  testuncompleted_cr0.json
backend/data/monsters/uncompleted/: TestUncompleted0.json
backend/data/spells/: spells.json
backend/data/subclasses/barbarian/: subclass_barbarian_berserker.json
backend/data/subclasses/cleric/: subclass_cleric_life.json
backend/data/templates/attackRoll/: attackrolltemplatetest.json  attackrolltest.json
backend/data/templates/other/: othertemplatetest.json  othertest.json
backend/data/templates/savingThrow/: savingthrowtemplatetest_int.json  savingthrowtest_cha.json
backend/data/templates/trait/: traittemplatetest1_uses1.json  traittemplatetest2_uses2.json
backend/data/traitTemplates/: test.json
backend/src/: main.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: HomeView.vue  StatBlockRenderer.vue  StatusDisplay.vue
frontend/src/components/Auth/: LoginForm.vue
frontend/src/components/CombatTracker/: CombatTracker.vue  CombatantItem.vue  EncounterSelector.vue  InitiativeList.vue  InteractionPanel.vue  StatBlock.vue  StatBlockDisplay.vue
frontend/src/plugins/: vuetify.js  webfontloader.js
frontend/src/router/: index.js
frontend/src/store/: auth.js
frontend/src/utils/: 5emm-v10.json  CharacterTemplate.json  MonsterTemplate.json  dndDataService.js  mathRendering.js  spellsData.js
frontend/src/utils/DnDData/: crData.js  (+4 more)
frontend/src/views/: CombatTrackerView.vue  DmScreenView.vue  EncounterBuilderView.vue  MapView.vue  Tab5View.vue  Tab6View.vue  Tab7View.vue  Tab8View.vue
(+25 files in other folders)
